Make sure the header and footer maintain their height on safari

--- a/src/components/kanban-footer.scss
+++ b/src/components/kanban-footer.scss
@@ -4,6 +4,7 @@
     @include flex-container-horizontal;
     @include flex-container-content-centered;
     @include flex-container-alignment-centered;
+    @include flex-shrink(0);
 
     height: 40px;
     color: rgba(255,255,255,.5);
